--- a/src/static/css/Layout.css
+++ b/src/static/css/Layout.css
@@ -1,10 +1,17 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 
 .Layout{
-    width: 100vw;
-    height: 100vh;
+    width: calc(100vw - 17px);
+    height: 100%;
 }
+
+/* body{
+    width: 100vw !important;
+    height: 100vh !important;
+    max-width: 100vw !important;
+    max-height: 100vh !important;
+} */
