--- a/src/static/css/Main.css
+++ b/src/static/css/Main.css
@@ -2,5 +2,11 @@
 
 body {
     font-family: 'Inter';
-    display: flex;
+    /* display: flex; */
+
+}
+
+.Maindiv{
+    /* width: 100vw; */
+    height: auto;
 }
